feature: added looping step to config file

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 FreqRangStart = 30
 FreqRangeEnd = 35
 FreqMultiplier = 1e6
+Step = 1
 OutputFolderPath = ./Data
 
 [HACKRF.HARDWARE]
@@ -18,5 +19,5 @@ PacketDestination = 192.168.1.1
 StopDestionation = 23.212.52.66
 
 [PACKET.SNIFFER]
-Interface = en7
+Interface = en0
 
