feature: idle data collection script

--- a/Idle Data Collector/config.ini
+++ b/Idle Data Collector/config.ini
@@ -1,6 +1,6 @@
 [GENERAL]
-FreqRangStart = 30
-FreqRangeEnd = 35
+FreqRangStart = 1
+FreqRangeEnd = 200
 FreqMultiplier = 1e6
 Step = 1
 OutputFolderPath = ./Data
@@ -13,11 +13,10 @@ SampleRate = 20
 GainControl = False
 
 [PACKET.SENDER]
-BurstSize = 100
-PacketDestination = 192.168.1.1
+Duration = 2.4
 ; sniffing will be ended when a packet is sent to this address
 StopDestionation = 23.212.52.66
 
 [PACKET.SNIFFER]
-Interface = en0
+Interface = en7
 
